# strict-encoding

./: Cargo.toml  LICENSE  MAINTAINERS.md  MANIFEST.yml  README.md  codecov.yml  flake.nix
.github/: FUNDING.yml
.github/workflows/: build.yml  codecov.yml  lint.yml  test.yml
rust/: Cargo.toml  README.md
rust/derive/: Cargo.toml  README.md
rust/derive/src/: derive.rs  derive_decode.rs  derive_dumb.rs  derive_encode.rs  derive_type.rs  lib.rs  params.rs  types.rs  util.rs
rust/derive/tests/: base.rs  basics.rs  dumb.rs  encoding.rs  enums.rs  structs.rs  tlv.rs  type.rs
rust/derive/tests/basics-failures/no_empty_types/: main.rs
rust/derive/tests/basics-failures/no_networking_units/: mod.rs
rust/derive/tests/basics-failures/no_strict_unions/: mod.rs
rust/derive/tests/basics-failures/no_unit_types/: main.rs
rust/derive/tests/basics-failures/strict_network_exclusivity/: mod.rs
rust/derive/tests/common/: mod.rs
rust/derive/tests/tlv-failures/no_enums/: mod.rs
rust/derive/tests/tlv-failures/no_strict/: mod.rs
rust/derive/tests/tlv-failures/no_unions/: mod.rs
rust/derive/tests/tlv-failures/tlv_non_u16_type/: mod.rs
rust/derive/tests/tlv-failures/tlv_undeclared/: mod.rs
rust/derive_helpers/: Cargo.toml
rust/derive_helpers/src/: decode.rs  encode.rs
rust/src/: ascii.rs  base.rs  ed25519.rs  embedded.rs  error.rs  file.rs  ident.rs  lib.rs  macros.rs  primitives.rs  read.rs  reader.rs  stl.rs  test.rs  traits.rs  types.rs  util.rs  write.rs  writer.rs
rust/test_helpers/: Cargo.toml
rust/test_helpers/src/: lib.rs
