[workspace]
members = ["rust", "rust/derive", "rust/test_helpers"]
default-members = ["rust", "rust/derive", "rust/test_helpers"]
resolver = "2"

[workspace.package]
authors = ["Dr Maxim Orlovsky <orlovsky@ubideco.org>"]
homepage = "https://strict-types.org"
repository = "https://github.com/strict-types/strict-encoding"
rust-version = "1.69.0" # Due to amplify crate
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
amplify = { version = "4.6.0" }
serde_crate = { package = "serde", version = "1", features = ["derive"] }
