[package]
name = "strict_encoding"
version = { workspace = true }
description = "Strict encoding: deterministic & confined binary serialization for strict types"
keywords = ["strict-types", "gadt", "serialization", "serde", "protobuf"]
categories = ["encoding", "parsing"]
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "README.md"
exclude = ["derive", "test_helpers"]

[dependencies]
amplify = { workspace = true, features = ["proc_attr", "hex"] }
strict_encoding_derive = { version = "3.0.0-alpha.1", path = "derive" }
serde_crate = { workspace = true, optional = true }

[dev-dependencies]
amplify = { workspace = true, features = ["proc_attr", "hex"] }
ciborium = "0.2.2"
half = "<2.5.0"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
strict_encoding_test = { path = "./test_helpers" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.8.4", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = [
    "derive",
]
all = [
    "std",
    "float",
    "derive",
    "serde"
]
std = ["amplify/std", "serde_crate/std"]
derive = []
float = [
    "amplify/apfloat",
]
half = [] # TODO: Remove this with major version update
serde = [
    "serde_crate",
    "amplify/serde"
]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
