[package]
name = "strict_encoding_derive"
version = "2.0.0-alpha.1"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@ubideco.org>"]
description = "Strict encoding derivation macros"
repository = "https://github.com/LNP-BP/client_side_validation"
homepage = "https://github.com/LNP-BP"
keywords = ["lnp-bp", "strict-encoding", "networking", "internet2", "proc-macro"]
categories = ["encoding", "parsing"]
readme = "README.md"
edition = "2021"
rust-version = "1.59.0"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = "1"
proc-macro2 = "1"
amplify_syn = "1.1"
heck = "0.4.0"

[dev-dependencies]
strict_encoding = { path = ".." }
strict_encoding_test = { path = "../test_helpers" }
amplify = "4.0.0-beta.7"
compiletest_rs = "0.9.0"
