[package]
name = "strict_encoding_derive"
version = "2.7.0-beta.1"
description = "Strict encoding derivation macros"
keywords = ["strict-encoding", "proc-macro"]
categories = ["development-tools", "encoding"]
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["full"] }
proc-macro2 = "1"
amplify_syn = "2.0.1"
heck = "0.4.1"

[dev-dependencies]
strict_encoding = { path = ".." }
strict_encoding_test = { path = "../test_helpers" }
amplify = { workspace = true }
compiletest_rs = "0.10.2"
