[package]
name = "strict_encoding_test"
version = { workspace = true }
description = "Helper functions for testing strict encodings"
keywords = ["strict-encoding", "test-helpers"]
categories = ["encoding", "parsing", "development-tools"]
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "../README.md"

[lib]

[dependencies]
amplify = { workspace = true }
strict_encoding = { version = "3.0.0-alpha.1", path = ".." }
